--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "author": "Diego Monsalve",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.3"
+    "@types/express": "4.17.17",
+    "ts-node-dev": "2.0.0",
+    "typescript": "5.1.3"
   },
   "dependencies": {
     "express": "4.18.2"
