--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "base-node",
+  "name": "base-rest-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"ts-node-dev src/index.ts",
+    "dev": "nodemon build/index.js",
     "start": "node build/index.js",
-    "tsc": "tsc",
+    "tsc": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Diego Monsalve",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
-    "ts-node-dev": "2.0.0",
+    "nodemon": "2.0.22",
     "typescript": "5.1.3"
   },
   "dependencies": {
+    "cors": "2.8.5",
+    "dotenv": "16.3.1",
     "express": "4.18.2"
   }
 }
